Add ncat tool, with instructions for a simple web server
Change-type: patch
Signed-off-by: Ken Bannister <kb2ma@runbox.com>

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,12 +1,9 @@
 FROM alpine:latest
 
-RUN apk add --no-cache \
-    bash \
-    lshw \
-    nano \
-    tcpdump
+RUN apk add --no-cache bash lshw nano nmap-ncat tcpdump
 
 WORKDIR /app
 COPY doc doc
+COPY src src
 
 ENTRYPOINT ["bash"]
